# molecular-scaffold-aware-multi-task-toxicity-prediction

./: .gitignore  QUALITY_IMPROVEMENTS.md  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
notebooks/: exploration.ipynb
results/: results.json
scripts/: evaluate.py  predict.py  train.py
src/molecular_scaffold_aware_multi_task_toxicity_prediction/: __init__.py
src/molecular_scaffold_aware_multi_task_toxicity_prediction/data/: __init__.py  loader.py  preprocessing.py
src/molecular_scaffold_aware_multi_task_toxicity_prediction/evaluation/: __init__.py  metrics.py
src/molecular_scaffold_aware_multi_task_toxicity_prediction/models/: __init__.py  components.py  model.py
src/molecular_scaffold_aware_multi_task_toxicity_prediction/training/: __init__.py  trainer.py
src/molecular_scaffold_aware_multi_task_toxicity_prediction/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_scripts.py  test_training.py
